Fix: about img with on mobile devices

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -16,6 +16,19 @@ body {
     overflow-x: hidden;
 }
 
+img {
+    max-width: 100%;
+    height: auto;
+    object-fit: contain;
+}
+
+.header-logo {
+    img {
+        width: auto;
+        height: 100%;
+    }
+}
+
 
 .navbar {
     height: $navbar-heigh;
